# CryptoMarketAPI

./: .flake8  .gitignore  Dockerfile  alembic.ini  consumer.py  docker-compose.yml  docker-entrypoint.sh  enter_venv.bat  main.py  pyproject.toml  requirements.txt  router.py  setup.cfg
alembic/: env.py
alembic/versions/: 0fde7afe38e6_init.py  20230321173437_add_user.py  20230321191959_add_balance.py  20230513185652_add_init_quantity.py  20230607183100_add_creator.py  2ae68dfd2304_init.py
config/: .env  config.py
services/: main.py  routers.py
services/auth/: Dockerfile  crud.py  db.py  deps.py  main.py  routes.py  schemas.py
services/authorization/: authorization.py  main.py  schemas.py
services/broker/: base_class.py  deps.py  exceptions.py  publish.py  schemas.py
services/brokers/: docker-compose.yml
services/common/: timezone.py  utils.py
services/config/: .env  .kafka.env  config.py
services/country/: authorization.py  crud.py  db.py  docker-compose.yml  main.py  models.py  routes.py  schemas.py
services/currency/: authorization.py  crud.py  db.py  docker-compose.yml  main.py  models.py  routes.py  schemas.py
services/db/: base.py  db.py  deps.py  docker-compose.yml
services/kafka/: docker-compose.yml
services/match_engine/: db.py  docker-compose.yml  engine.py  main.py  schemas.py
services/nginx/: nginxIngress.yaml
static/: dashboard.css  header.html  notlogged.js  script.js  styles.css
templates/: currencies.html  currency.html  dashboard.html  login.html  orders.html  register.html  user.html  verify.html
views/: router.py
(+126 files in other folders)
